--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "async": "^0.9.0",
     "body-parser": "^1.12.2",
     "express": "^4.12.3",
+    "jade": "^1.9.2",
     "media-typer": "^0.3.0",
     "merge": "^1.2.0",
     "nedb": "^1.1.1",
