--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.12.2",
+    "compression": "^1.4.3",
     "express": "^4.12.3",
     "jade": "^1.9.2",
     "media-typer": "^0.3.0",
