--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crowdload",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Crowdsource downloads",
   "scripts": {
     "test": "coffee test/*.coffee | tap-spec",
@@ -11,31 +11,37 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/infolis/crowdload"
+    "url": "https://github.com/kba/crowdload"
   },
   "author": "kba",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/infolis/crowdload/issues"
+    "url": "https://github.com/kba/crowdload/issues"
   },
-  "homepage": "https://github.com/infolis/crowdload",
+  "homepage": "https://github.com/kba/crowdload",
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "^1.12.2",
+    "coffeescript-compiler": "^0.1.1",
     "compression": "^1.4.3",
+    "dom-serializer": "^0.1.0",
+    "entities": "^1.1.1",
     "express": "^4.12.3",
     "jade": "^1.9.2",
     "media-typer": "^0.3.0",
     "merge": "^1.2.0",
+    "moment": "^2.10.2",
+    "multiparty": "^4.1.1",
     "nedb": "^1.1.1",
     "raw-body": "^1.3.3",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "uuid": "^2.0.1",
+    "winston": "^1.0.0"
   },
   "devDependencies": {
     "coffee-script": "^1.9.1",
     "docker": "^0.2.14",
     "tap-spec": "^2.2.2",
     "tapes": "^0.4.1"
-  },
-  "main": "lib/index.js"
+  }
 }
