--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dom-serializer": "^0.1.0",
     "entities": "^1.1.1",
     "express": "^4.12.3",
+    "fs-extra": "^0.18.2",
     "jade": "^1.9.2",
     "media-typer": "^0.3.0",
     "merge": "^1.2.0",
@@ -35,6 +36,7 @@
     "nedb": "^1.1.1",
     "raw-body": "^1.3.3",
     "socket.io": "^1.3.5",
+    "superagent": "^1.2.0",
     "uuid": "^2.0.1",
     "winston": "^1.0.0"
   },
